Release 1.2.5 (unreleased)
==========================

Release 1.2.4 (2020-08-09)
==========================

* Import PickleHTMLBuilder from sphinxcontrib-serializinghtml package

Release 1.2.3 (2020-06-27)
==========================

* #43: doctreedir argument has been ignored on initialize app

Release 1.2.2 (2020-04-29)
==========================

* Stop to use sphinx.util.pycompat:htmlescape

Release 1.2.1 (2020-03-21)
==========================

* #41: templates/searchresults.html is missing in the source tarball

Release 1.2.0 (2020-02-07)
==========================

* Drop python2.7 and 3.4 support

Release 1.1.2 (2019-05-19)
==========================

* #6380: sphinxcontrib-websupport doesn't work with Sphinx 2.0


Release 1.1.1 (2019-03-21)
==========================

* #6190: sphinxcontrib-websupport doesn't work with Sphinx 2.0.0b1

Release 1.1.0 (2018-06-05)
==========================

* #6 Add compatibility with Sphinx 1.6. Thanks to Dmitry Shachnev.
* #13 Support testing with Sphinx-1.7.
* #9 Include license file in the generated wheel package. Thanks to
  Jon Dufresne.

Release 1.0.1 (2017-05-07)
==========================

* Make sqlalchemy and whoosh as optional dependency

Release 1.0.0 (2017-04-23)
==========================

* Initial release (copied from sphinx package)