@@ -1,9 +1,0 @@
-include README.rst
-include LICENSE
-include CHANGES
-
-include tox.ini
-
-recursive-include tests *
-recursive-include sphinxcontrib/websupport/files *
-include sphinxcontrib/websupport/templates/*.html
