@@ -14,7 +14,7 @@ urls.Download = "https://pypi.org/project/sphinxcontrib-websupport/"
 urls.Homepage = "https://www.sphinx-doc.org/"
 urls."Issue tracker" = "https://github.com/sphinx-doc/sphinx/issues"
 license.text = "BSD-2-Clause"
-requires-python = ">=3.5"
+requires-python = ">=3.9"
 
 # Classifiers list: https://pypi.org/classifiers/
 classifiers = [
@@ -28,14 +28,11 @@ classifiers = [
     "Programming Language :: Python",
     "Programming Language :: Python :: 3",
     "Programming Language :: Python :: 3 :: Only",
-    "Programming Language :: Python :: 3.5",
-    "Programming Language :: Python :: 3.6",
-    "Programming Language :: Python :: 3.7",
-    "Programming Language :: Python :: 3.8",
     "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
+    "Programming Language :: Python :: 3.13",
     "Framework :: Sphinx",
     "Framework :: Sphinx :: Extension",
     "Topic :: Documentation",
@@ -45,7 +42,7 @@ classifiers = [
 ]
 dependencies = [
     "jinja2",
-    "Sphinx",
+    "Sphinx>=5",
     "sphinxcontrib-serializinghtml",
 ]
 dynamic = ["version"]
@@ -55,7 +52,6 @@ test = [
     "pytest",
     "sqlalchemy",
     "whoosh",
-    "Sphinx",
 ]
 lint = [
     "flake8",
