@@ -1,18 +1,10 @@
 [tox]
 minversion = 2.4.0
-envlist=
-    py{35,36,37,38,39,310-dev},
-    flake8
+envlist =
+    py{39,310,311,312,313},
+    flake8,
     mypy
-
-[gh-actions]
-python =
-    3.5: py35
-    3.6: py36
-    3.7: py37
-    3.8: py38
-    3.9: py39
-    3.10: py310-dev
+isolated_build = True
 
 [testenv]
 usedevelop = True
