@@ -1,6 +1,9 @@
 Release 1.2.5 (unreleased)
 ==========================
 
+* Drop support for Python 3.5, 3.6, 3.7, and 3.8
+* Raise minimum required Sphinx version to 5.0
+
 Release 1.2.4 (2020-08-09)
 ==========================
 
